# iai_avatar_msgs

./: .CMakeLists.txt.swp  .package.xml.swp  CMakeLists.txt  package.xml
action/: QnA.action
msg/: QnAAction.msg  QnAActionFeedback.msg  QnAActionGoal.msg  QnAActionResult.msg  QnAGoal.msg  QnAResult.msg  SemanticCamObj.msg
srv/: AvatarRotation.srv  Command.srv  GeneralGrasp.srv  NamedTargetInterpolation.srv  PositionDuration.srv  SemanticCamera.srv
